@@ -1,4 +1,4 @@
-package core;
+package core.io;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
@@ -35,13 +35,13 @@ public class DataManager {
 
         for (Group group : groupsTabbedPanel.groups) {
             Map<String, Object> groupData = new HashMap<>();
-            groupData.put("groupName", group.groupName);
+            groupData.put("groupName", group.getName());
 
             List<Map<String, String>> snippetsData = new ArrayList<>();
             for (Snippet snippet : group.snippets) {
                 Map<String, String> snippetData = new HashMap<>();
-                snippetData.put("name", snippet.snippetName);
-                snippetData.put("code", snippet.snippetCode);
+                snippetData.put("name", snippet.getName());
+                snippetData.put("code", snippet.getText());
                 snippetsData.add(snippetData);
             }
 
@@ -81,10 +81,10 @@ public class DataManager {
             // Recreate groups and snippets
             for (Map<String, Object> groupData : groupsData) {
                 String groupName = (String) groupData.get("groupName");
-                groupsTabbedPanel.addGroup(groupName);
+                groupsTabbedPanel.addGroup(groupName, false);
 
                 // Get the current group (the last one added)
-                Group currentGroup = groupsTabbedPanel.groups.get(groupsTabbedPanel.groups.size() - 1);
+                Group currentGroup = groupsTabbedPanel.groups.getLast();
 
                 // Add snippets to the group
                 List<Map<String, String>> snippetsData = (List<Map<String, String>>) groupData.get("snippets");
@@ -94,12 +94,11 @@ public class DataManager {
                         String snippetCode = snippetData.get("code");
 
                         // Add the snippet to the group
-                        currentGroup.addSnippet(snippetName);
+                        currentGroup.addSnippet(snippetName, snippetCode, false);
 
                         // Get the last added snippet and set its code
-                        Snippet snippet = currentGroup.snippets.get(currentGroup.snippets.size() - 1);
-                        snippet.snippetCode = snippetCode;
-                        snippet.updateGUI();
+                        Snippet snippet = currentGroup.snippets.getLast();
+                        snippet.revalidate();
                     }
                 }
             }
